feat: return mock data from json file retrieved from oebs view
