# src/main/java/no/nav/oebs/okonomimodell/mapper/JsonToModelMapper.java
@@ -1,5 +1,6 @@
 package no.nav.oebs.okonomimodell.mapper;
 
+import org.openapitools.model.Relasjon;
 import org.openapitools.model.Segment;
 import org.openapitools.model.SegmentType;
 import org.springframework.stereotype.Component;
@@ -12,18 +13,41 @@ public class JsonToModelMapper {
 
     public List<Segment> mapJsonToSegments(JsonNode jsonSegments) {
         List<Segment> segments = new java.util.ArrayList<>(List.of());
-        for (JsonNode elem : jsonSegments.asArray()) {
-            var segment = mapJsonToSegment(elem);
-            segments.add(segment);
-        }
+        jsonSegments.valueStream().map(this::mapJsonToSegment).forEach(segments::add);
         return segments;
     }
 
-    public Segment mapJsonToSegment(JsonNode jsonSegment) {
+    private Segment mapJsonToSegment(JsonNode jsonSegment) {
         Segment segment = new Segment();
-        segment.setSegmentKey(jsonSegment.get("Key").toString());
-        segment.setDescription(jsonSegment.get("Description").toString());
-        segment.setSegmentType(SegmentType.ARTSKONTO);
+        segment.segmentVerdi(jsonSegment.get("Key").asString());
+        segment.setBeskrivelse(jsonSegment.get("Description").asString());
+        segment.setSegmentType(mapSegmentType(jsonSegment.get("SegmentName").asString()));
+
+        String defaultDimention = "DefaultDimension";
+        if (jsonSegment.has(defaultDimention) && !jsonSegment.get(defaultDimention).isNull()) {
+            jsonSegment.get(defaultDimention)
+                    .valueStream()
+                    .forEach(s -> segment.addRelasjonItem(mapJsonToRelation(s)));
+        }
         return segment;
+    }
+
+    private SegmentType mapSegmentType(String segmentType) {
+        return switch (segmentType) {
+            case "OR_KSTED" -> SegmentType.KOSTNADSSTED;
+            case "OR_ART" -> SegmentType.ARTSKONTO;
+            case "OR_PRODUKT" -> SegmentType.PRODUKT;
+            case "OR_OPPGAVE" -> SegmentType.OPPGAVE;
+            case "OR_STATSKONTO" -> SegmentType.STATSREGNSKAPSKONTO;
+            case "OR_FELLES" -> SegmentType.FELLES;
+            default -> null; //todo: what to do if segment type is unknown? throw exception or return null?
+        };
+    }
+
+    private Relasjon mapJsonToRelation(JsonNode jsonRelation) {
+        Relasjon relation = new Relasjon();
+        relation.setSegmentType(mapSegmentType(jsonRelation.get("SegmentName").asString()));
+        relation.setSegmentVerdi(jsonRelation.get("SegmentKey").asString());
+        return relation;
     }
 }
